temp fix to cookie getting covered

--- a/style/mall/common.css
+++ b/style/mall/common.css
@@ -213,7 +213,7 @@ main {
 /*end header*/
 /*footer*/
 footer {
-    position: absolute;
+    /* position: absolute; */
     bottom: 0;
     width: 100%;
 	max-height: 75px;
